@@ -1,7 +1,7 @@
 Package: rstan
 Type: Package
 Title: RStan: R interface to Stan
-Version: 2.3.0
+Version: 2.4.0
 Date: 2014-06-23
 Author: Jiqiang Guo <guojq28@gmail.com>,   
         Michael Betancourt <betanalpha@gmail.com>,
