@@ -1,24 +1,24 @@
 citHeader("To cite Stan in publications use:")
 
 citEntry(entry = "Misc", 
-         title = "Stan: A C++ Library for Probability and Sampling, Version 2.3.0",
+         title = "Stan: A C++ Library for Probability and Sampling, Version 2.4.0",
          author = person(given = "Stan Development Team"),
          year = "2013",
          url = "http://mc-stan.org/",
          textVersion =
            paste("Stan Development Team (2013).", 
-                 title = "Stan: A C++ Library for Probability and Sampling, Version 2.3.0.",
+                 title = "Stan: A C++ Library for Probability and Sampling, Version 2.4.0.",
                  "URL http://mc-stan.org/.") 
 )
   
 citEntry(entry = "Manual", 
-         title = "Stan Modeling Language User's Guide and Reference Manual, Version 2.3.0",
+         title = "Stan Modeling Language User's Guide and Reference Manual, Version 2.4.0",
          author = person(given = "Stan Development Team"),
          year = "2013", 
          url = "http://mc-stan.org/",
          textVersion  =
            paste("Stan Development Team (2013).", 
-                 "Stan Modeling Language User's Guide and Reference Manual, Version 2.3.0.",
+                 "Stan Modeling Language User's Guide and Reference Manual, Version 2.4.0.",
                  "URL http://mc-stan.org/.") 
 )
 
