@@ -23,7 +23,7 @@ SEXP seq_permutation(SEXP conf);
 SEXP CPP_read_comments(SEXP file, SEXP n);
 SEXP stan_prob_autocovariance(SEXP v);
 SEXP is_Null_NS(SEXP ns);
-SEXP CPP_stanc230(SEXP model_stancode, SEXP model_name);
+SEXP CPP_stanc240(SEXP model_stancode, SEXP model_name);
 SEXP CPP_stan_version(); 
 #ifdef __cplusplus
 }
@@ -40,7 +40,7 @@ static const R_CallMethodDef CallEntries[] = {
   CALLDEF(CPP_read_comments, 2),
   CALLDEF(stan_prob_autocovariance, 1),
   CALLDEF(is_Null_NS, 1),
-  CALLDEF(CPP_stanc230, 2),
+  CALLDEF(CPP_stanc240, 2),
   CALLDEF(CPP_stan_version, 0),
   {NULL, NULL, 0}
 };
