@@ -2,7 +2,7 @@
   title = {Stan Modeling Language: User's Guide and Reference Manual}, 
   author = "{The Stan Development Team}", 
   year = {2013},
-  note = {Stan Version 2.3.0 (http://mc-stan.org)},
+  note = {Stan Version 2.4.0 (http://mc-stan.org)},
   url = {http://mc-stan.org}
 }
 
@@ -18,7 +18,7 @@
     author = {{The Stan Development Team}},
     year = 2013,
     title = {Stan: A {C++} {L}ibrary for {P}robability
-             and {S}ampling, Version 2.3.0},
+             and {S}ampling, Version 2.4.0},
     url = {http://mc-stan.org/},
     note = {http://mc-stan.org/}
 }
